--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "crypto": "^1.0.1",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
+    "images": "^3.0.2",
     "md5": "^2.2.1",
     "multer": "^1.4.1",
     "mysql": "^2.16.0",
