--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,8 +6,8 @@
     },
     "extends": "eslint:recommended",
     "parserOptions": {
+		"ecmaVersion": 2018,
         "ecmaFeatures": {
-            "experimentalObjectRestSpread": true,
             "jsx": true
         },
         "sourceType": "module"
